Kubernetes/ingress/echo-server-service-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: echo-server-svc
  namespace: training
spec:
  selector:
    app-name: "echo-server"
  # clusterIP: 17.122.11.122
  # type: ClusterIP # default
  ports:
    - port: 80
      targetPort: http #8080
