Kubernetes/ingress/ingress-service-load-balancer.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-svc
  namespace: ingress-nginx
spec:
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: http
