Kubernetes/ingress/users-app.yml
apiVersion: v1
kind: Pod
metadata:
  namespace: training
  name: postgres-po
  labels:
    app-name: postgres
spec:
  containers:
    - name: postgres
      image: postgres:17-alpine
      ports:
        - containerPort: 5432
          name: db
      volumeMounts:
        - name: init-db-scripts
          mountPath: /docker-entrypoint-initdb.d
  volumes:
    - name: init-db-scripts
      configMap:
        name: init-db-scripts-cm
---
apiVersion: v1
kind: Service
metadata:
  namespace: training
  name: postgres-service
spec:
  selector:
    app-name: postgres
  ports:
    - port: 5432
      targetPort: db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: training
  name: users-dep
  annotations:
    kubernetes.io/change-cause: "initial release"
spec:
  replicas: 3
  selector:
    matchLabels:
      app-name: users
  template:
    metadata:
      namespace: training
      labels:
        app-name: users
    spec:
      containers:
        - name: users
          image: landrzejewski/users:latest
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              memory: 64M
              cpu: "250m"
            limits:
              memory: 128M
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  namespace: training
  name: users-svc
spec:
  selector:
    app-name: users
  ports:
    - port: 80
      targetPort: http
